// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation should throw an error on the "headers" option with "true" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.headers should be an object:
   object { … }"
`;

exports[`validation should throw an error on the "index" option with "{}" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.index should be one of these:
   boolean | string
   Details:
    * configuration.index should be a boolean.
    * configuration.index should be a string."
`;

exports[`validation should throw an error on the "index" option with "0" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.index should be one of these:
   boolean | string
   Details:
    * configuration.index should be a boolean.
    * configuration.index should be a string."
`;

exports[`validation should throw an error on the "methods" option with "{}" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.methods should be an array:
   [string, ...]"
`;

exports[`validation should throw an error on the "methods" option with "true" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.methods should be an array:
   [string, ...]"
`;

exports[`validation should throw an error on the "mimeTypes" option with "foo" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.mimeTypes should be an object:
   object { … }"
`;

exports[`validation should throw an error on the "outputFileSystem" option with "false" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.outputFileSystem should be an object:
   object { … }"
`;

exports[`validation should throw an error on the "publicPath" option with "false" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.publicPath should be a string."
`;

exports[`validation should throw an error on the "serverSideRender" option with "0" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.serverSideRender should be a boolean."
`;

exports[`validation should throw an error on the "serverSideRender" option with "foo" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.serverSideRender should be a boolean."
`;

exports[`validation should throw an error on the "stats" option with "0" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.stats should be one of these:
   object { … } | boolean | \\"none\\" | \\"errors-only\\" | \\"errors-warnings\\" | \\"minimal\\" | \\"normal\\" | \\"verbose\\"
   Details:
    * configuration.stats should be an object:
      object { … }
    * configuration.stats should be a boolean.
    * configuration.stats should be one of these:
      \\"none\\" | \\"errors-only\\" | \\"errors-warnings\\" | \\"minimal\\" | \\"normal\\" | \\"verbose\\""
`;

exports[`validation should throw an error on the "stats" option with "foo" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.stats should be one of these:
   object { … } | boolean | \\"none\\" | \\"errors-only\\" | \\"errors-warnings\\" | \\"minimal\\" | \\"normal\\" | \\"verbose\\"
   Details:
    * configuration.stats should be an object:
      object { … }
    * configuration.stats should be a boolean.
    * configuration.stats should be one of these:
      \\"none\\" | \\"errors-only\\" | \\"errors-warnings\\" | \\"minimal\\" | \\"normal\\" | \\"verbose\\""
`;

exports[`validation should throw an error on the "watchOptions" option with "0" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.watchOptions should be an object:
   object { … }"
`;

exports[`validation should throw an error on the "writeToDisk" option with "{}" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.writeToDisk should be one of these:
   boolean | function
   Details:
    * configuration.writeToDisk should be a boolean.
    * configuration.writeToDisk should be an instance of function."
`;
